@@ -3,6 +3,8 @@
 
 Version 8.4.0
 
+  - Fix for Bug#91550 (Bug#28297874), DatabaseMetaData specifies incorrect extra name characters.
+
   - Fix for Bug#113129 (Bug#36043145), setting the FetchSize on a Statement object does not affect.
 
   - Fix for Bug#22931632, GETPARAMETERBINDINGS() ON A PS RETURNS NPE WHEN NOT ALL PARAMETERS ARE BOUND.
